--- a/assets/styles/mixins.scss
+++ b/assets/styles/mixins.scss
@@ -88,3 +88,22 @@
   gap: 1.5rem;
   overflow-y: auto;
 }
+
+@mixin scrollbarStyle(){
+  &::-webkit-scrollbar {
+    background-color: transparent;
+    width: 4px;
+    height: 4px;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #DFECC5;
+    border-radius: 8px;
+    border: 2px solid transparent;
+  }
+  &::-webkit-scrollbar-button {
+    display: none;
+  }
+}
